# plutarch-ply

./: example.cabal  flake.nix
compiled-scripts/: Index.json
example-plutarch/: cabal.project  flake.nix
example-plutarch/offchain/: example-plutarch-offchain.cabal
example-plutarch/onchain/: example-plutarch-onchain.cabal
example-plutarch/onchain/app/: Main.hs
example-plutarch/onchain/src/: NftM.hs
example-plutus/: cabal.project  flake.nix
example-plutus/offchain/: example-plutus-offchain.cabal
example-plutus/onchain/: example-plutus-onchain.cabal
exporter-plutarch/: Exporter.hs
src/Example/: NftM.hs
