cabal-version: 3.0
name:          example
version:       0.0.1
synopsis:      TODO
description:   TODO
license:
license-file:
author:        MLabs
maintainer:    TODO
copyright:     TODO
category:      TODO
build-type:    Simple

flag dev
  description: Enable lean development
  default:     False
  manual:      True

-- Common sections

common common-configs
  default-language: Haskell2010

common common-ghc-opts
  ghc-options:
    -Wcompat -Wincomplete-uni-patterns -Wmissing-deriving-strategies
    -Wredundant-constraints -Wmissing-home-modules
    -Wmissing-export-lists -Wno-unticked-promoted-constructors

  -- -Wall
  -- -fwarn-unused-imports
  if !flag(dev)
    ghc-options: -Werror

common common-deps
  build-depends:
    , base
    , plutarch
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , text

common common-lang
  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

-- Build targets

library
  import:          common-lang
  import:          common-configs
  import:          common-deps
  import:          common-ghc-opts
  exposed-modules: Example.NftM
  hs-source-dirs:  src

library exporter-plutarch
  import:          common-lang
  import:          common-configs
  import:          common-deps
  import:          common-ghc-opts
  exposed-modules: Exporter
  build-depends:
    , aeson
    , aeson-pretty
    , base16-bytestring
    , bytestring
    , containers
    , directory
    , example
    , filepath
    , mtl
    , ply-core
    , ply-plutarch

  hs-source-dirs:  exporter-plutarch
  ghc-options:     -threaded -rtsopts -with-rtsopts=-N
